# payload-dumper

./: .gitignore  README.md  pyproject.toml  requirement.txt
docs/: README.zh-CN.md
payload_dumper/: dumper.py  http_file.py
src/payload_dumper/: __init__.py  __main__.py  dumper.py  http_file.py  update_metadata_pb2.py
src/payload_dumper/zipfile/: README.md  __init__.py
