[tool.poetry]
name = "payload_dumper"
version = "0.3.0"
description = "Dump partitions from Android's payload.bin"
authors = ["Rasmus Moorats <xx@nns.ee>"]
readme = "README.md"
repository = "https://github.com/nnsee/payload-dumper"
homepage = "https://github.com/nnsee/payload-dumper"

[tool.poetry.scripts]
payload_dumper = "payload_dumper:main"

[tool.poetry.dependencies]
python = ">=3.12"  # https://t.me/real5ec1cff/205
httpx = ">=0.21.2"  # https://github.com/encode/httpx/pull/2309
protobuf = "^3.19.3"
bsdiff4 = "^1.2.1"
enlighten = "^1.12.2"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.isort]
atomic = true
profile = "black"
line_length = 89
skip_gitignore = true
known_first_party = ["payload_dumper"]

[build-system]
requires = ["poetry-core"]
build-backend= "poetry.core.masonry.api"
