[tool.poetry]
name = "payload_dumper"
version = "0.3.0"
description = "Dump partitions from Android's payload.bin"
authors = ["Rasmus Moorats <xx@nns.ee>"]
readme = "README.md"
repository = "https://github.com/nnsee/payload-dumper"
homepage = "https://github.com/nnsee/payload-dumper"

[tool.poetry.scripts]
payload_dumper = "payload_dumper:main"

[tool.poetry.dependencies]
python = ">=3.8"
httpx = ">=0.23.1"  # https://github.com/encode/httpx/pull/2309
protobuf = ">=3.20.0"  # First version of google.protobuf.internal.builder
bsdiff4 = ">=1.2.3"  # This version officially supports Python 3.12
enlighten = ">=1.12.0"  # This version officially supports Python 3.12

[tool.pytest.ini_options]
pythonpath = "src"

[tool.isort]
atomic = true
profile = "black"
line_length = 89
skip_gitignore = true
known_first_party = ["payload_dumper"]

[build-system]
requires = ["poetry-core"]
build-backend= "poetry.core.masonry.api"
